Solved problem with PAGE and CONSOLE modules not fits the window size in separated mode (issue #35).

--- a/CSS/CONTENT/COMMON.CSS
+++ b/CSS/CONTENT/COMMON.CSS
@@ -1,3 +1,17 @@
+HTML
+{
+    WIDTH: 100%;
+    HEIGHT: 100%;
+}
+
+BODY
+{
+    DISPLAY: FLEX;
+    WIDTH: 100%;
+    HEIGHT: 100%;
+    MARGIN: 0;
+}
+
 .HIDDEN
 {
     DISPLAY: NONE;
