--- a/CSS/CONTENT/SEPARATOR.CSS
+++ b/CSS/CONTENT/SEPARATOR.CSS
@@ -1,19 +1,11 @@
-HTML
-{
-    WIDTH: 100%;
-    HEIGHT: 100%;
-}
-
 .SEPARATOR
 {
     --SEPARATOR-WIDTH: "420PX";
     --SEPARATOR-HEIGHT: "300PX";
 
-    DISPLAY: FLEX;
     POSITION: ABSOLUTE;
     WIDTH: CALC(100% + VAR(--SEPARATOR-WIDTH));
     HEIGHT: CALC(100% + VAR(--SEPARATOR-HEIGHT));
-    MARGIN: 0PX;
     OVERFLOW: HIDDEN;
 }
 
